# Explore-Bench

./: .gitignore  README.md
exploration_benchmark/: CMakeLists.txt  package.xml
exploration_benchmark/blueprints/: corner.yaml  corridor.yaml  loop.yaml  loop_with_corridor.yaml  loop_with_corridor_sym.pgm  room.yaml  room_with_corner.pgm  room_with_corner.yaml
exploration_benchmark/launch/: single_cost_node.launch  single_mmpf_node.launch  single_rl_node.launch  single_rrt_node.launch  two_cost_node.launch  two_mmpf_node.launch  two_rl_node.launch  two_rrt_node.launch
exploration_benchmark/rviz/: robot1_cost_node.rviz  robot1_rl_node.rviz  robot2_cost_node.rviz  robot2_rl_node.rviz
exploration_benchmark/scripts/: exploration_metric_for_single_robot.py  exploration_metric_for_two_robots.py  publish_tf_for_two_robots.py
exploration_benchmark/scripts/DRL/: run_single_robot.sh  run_two_robots.sh  single_robot_1.py  two_robot_1.py  two_robot_2.py
exploration_benchmark/src/: cost_node.cpp  mmpf_node.cpp  rrt_node_tf.cpp
graythree/src/: mapmerge_node.cpp
grid_simulator/: GridEnv.py
map_merge/launch/: map_merge.launch
onpolicy/: .gitignore  .gitmodules  README.md  environment.yaml  setup.py
onpolicy/onpolicy/: config.py
onpolicy/onpolicy/docs/: Makefile  make.bat
onpolicy/onpolicy/utils/: util.py  (+1 more)
sim_env/: CMakeLists.txt  package.xml
sim_env/launch/: gmapping.launch
sim_env/param_teb/: global_costmap_params.yaml
sim_env/worlds/: corner.world  corridor.world  loop.world  loop_with_corridor.world  room.world  room_with_corner.world  small.world
(+67 files in other folders)
